<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/length_button"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/length_button"
            app:backgroundTint="@color/red"
            android:textColor="@color/off_black"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp" app:layout_constraintEnd_toStartOf="@+id/volume_button"
            android:layout_marginEnd="5dp" android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/weight_button" android:textSize="20sp"/>
    <Button
            android:text="@string/volume_button"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/volume_button"
            app:backgroundTint="@color/yellow"
            android:textColor="@color/off_black"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintStart_toEndOf="@+id/length_button" android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@+id/speed_button"
            android:textSize="20sp"/>
    <Button
            android:text="@string/weight_button"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/weight_button"
            app:backgroundTint="@color/green"
            android:textColor="@color/off_black"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/length_button" app:layout_constraintBottom_toTopOf="@+id/created_by_label"
            app:layout_constraintEnd_toStartOf="@+id/speed_button" android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp" android:layout_marginBottom="50dp" android:textSize="20sp"/>
    <Button
            android:text="@string/speed_button"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/speed_button"
            app:backgroundTint="@color/blue"
            android:textColor="@color/off_black"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/volume_button" app:layout_constraintBottom_toTopOf="@+id/created_by_label"
            android:layout_marginStart="5dp" app:layout_constraintStart_toEndOf="@+id/weight_button"
            android:layout_marginTop="5dp" android:layout_marginBottom="50dp" android:textSize="20sp"/>
    <TextView
            android:text="@string/created_by_label"
            android:layout_width="347dp"
            android:layout_height="59dp" android:id="@+id/created_by_label"
            android:textSize="14sp" android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>